fix(feature) Added x-auth-key api authentaication and config for x-auth
